--- a/src/components/Portfolio/styles.module.scss
+++ b/src/components/Portfolio/styles.module.scss
@@ -2,6 +2,10 @@
     width: 100%;
     height: 1000px;
 
+    @media (max-width: 1024px) {
+      height: auto;
+    }
+
     @media (max-width: 768px) {
       height: auto;
     }
@@ -24,24 +28,28 @@
         margin-bottom: 90px;
         margin-top: 80px;
 
-        @media (max-width: 1024px) {
+        @media (min-width: 320px) {
+          margin-top: 720px;
+        }
+        
+        @media (min-width: 375px) {
+          margin-top: 730px;
+        }
+        
+        @media (min-width: 425px) {
+          margin-top: 750px;
+        }
+        
+        @media (min-width: 576px) {
+          margin-top: 750px;
+        }
+        
+        @media (min-width: 768px) {
+          margin-top: 750px;
+        }
+        
+        @media (min-width: 1024px) {
           margin-top: 300px;
         }
-          
-          @media (max-width: 768px) {
-            margin-top: 750px;
-          }
-
-          @media (max-width: 425px) {
-            margin-top: 750px;
-          }
-
-          @media (max-width: 375px) {
-            margin-top: 730px;
-          }
-
-          @media (max-width: 320px) {
-            margin-top: 720px;
-          }
     }
 }
