--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -20,22 +20,27 @@ header {
         margin: 0 auto;
   
         .img {
-          width: 150px;
+          width: 200px;
           height: 100px;
           background-color: transparent;
 
-          @media (max-width: 425px) {
-            width: 100px;
+          @media (max-width: 768px) {
+            width: 185px;
             height: 90px;
           }
 
+          @media (max-width: 425px) {
+            width: 145px;
+            height: 80px;
+          }
+
           @media (max-width: 375px) {
-            width: 85px;
-            height: 75px;
+            width: 105px;
+            height: 65px;
           }
           
           @media (max-width: 320px) {
-            width: 70px;
+            width: 90px;
             height: 60px;
           }
         }
@@ -44,9 +49,23 @@ header {
           display: flex;
           align-items: center;
           gap: 20px;
+
+          @media (max-width: 425px) {
+            gap: 10px;
+          }
+
+          @media (max-width: 375px) {
+            gap: 10px;
+          }
   
           .icone {
             cursor: pointer;
+
+            @media (max-width: 768px) {
+              width: 40px;
+              height: 31px;
+            }
+            
             @media (max-width: 425px) {
               width: 50px;
               height: 30px;
@@ -55,6 +74,7 @@ header {
             @media (max-width: 375px) {
               width: 40px;
               height: 30px;
+              margin-bottom: 2px;
             }
             
             @media (max-width: 320px) {
